--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,129 @@
-.App {
-  text-align: center;
+.time-display{
+  color:whitesmoke;
+  font-size: 8em;
+  font-weight: bolder;
+  text-shadow: 0px 12px 12px black
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.temp{
+  font-size: 1em
+}
+.date-display{
+  color:whitesmoke;
+  font-size: 3em;
+  font-weight: 300;
+  text-shadow: 0px 1px 1px black
+}
+.temperature-display{
+  font-size: 7em;
+  font-weight: 600;
+  color: whitesmoke;
+  text-shadow: 0px 6px 6px black
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.feel-temp{
+  font-size: 1.2em;
+  color: whitesmoke;
 }
 
-.App-link {
-  color: #61dafb;
+.react-parallax-bgimage{
+  filter:sepia(100%) !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.early-morning{
+  filter:sepia(50%) !important;
+}
+
+.sunset{
+  filter:sepia(100%) !important;
+}
+
+.temperature-display img{
+  filter: invert(1)
+}
+
+.weather{
+  font-size: 1.3em;
+  font-weight: 100;
+  color: whitesmoke;
+}
+
+.hover:hover{
+  transition: all 0.2s ease-in-out;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.card p{
+  font-size: 24px;
+  font-weight: 400
+}
+
+.transparent{
+  background: rgba(0, 0, 0, 0.4);
+  padding:8px;
+  border-radius: 3px;
+}
+
+.info{
+  text-align: center !important;
+}
+.info h5{
+  color:whitesmoke;
+  font-size: 1.2em;
+  font-weight: 100;
+}
+
+.info img{
+  filter: invert(0.8);
+  margin-bottom: 4px;
+}
+
+.display-info{
+  color: whitesmoke;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+.title{
+  text-overflow: ellipsis;
+  font-weight: 400;
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 4px;
+  margin:0
+}
+
+.content{
+  padding-left:8px ;
+  padding-bottom: 8px;
+  text-align: left;
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 0 4px 0;
+}
+.border-right {
+  border-right: 1px solid rgba(0, 0, 0, 0.2) !important;
+}
+
+.hover-scale:hover{
+  transition: all 0.2s ease-in-out;
+  background: rgba(0, 0, 0, 0.6);
+  transform: scale(1.1)
+}
+.customscrollbar::-webkit-scrollbar {
+  display: block !important;
+  width: 4px;
+}
+
+/* Track */
+.customscrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+
+/* Handle */
+.customscrollbar::-webkit-scrollbar-thumb {
+  background:rgba(255, 255, 255, 0.2); 
+  border-radius: 10px;
 }
